changes to grid

--- a/style-start.css
+++ b/style-start.css
@@ -141,12 +141,21 @@ h3 {
 .border-primary-400 {
   border: 2px solid #a775f1;
 }
-
+.grid-col-span-2{
+  grid-column: span 2;
+}
 /* components */
 .testimonial-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1.5rem;
   padding-block: 2rem;
   width: min(95%, 70rem);
   margin-inline: auto;
+  @media screen and (max-width:768px) {
+    grid-template-columns: 1fr;
+    
+  }
 }
 
 .testimonial {
@@ -154,6 +163,11 @@ h3 {
   padding: 2rem;
   border-radius: 0.5rem;
   box-shadow: 2.5rem 3.75rem 3rem -3rem hsl(var(--clr-secondary-400) / 0.25);
+}
+
+.testimonial:last-child{
+  grid-column:4;
+  grid-row:1;
 }
 
 .testimonial.quote {
